--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       
   #loadMoreBtn {
   background: var(--main-color); /* نفس لون زر التبرع */
-  color: #01665e;
+  color: #01665e !important;
   padding: 12px 24px;
   border-radius: var(--border-radius);
   border: none;
@@ -71,7 +71,7 @@
 }
 
 .stats-section h3 {
-  color: white;
+  color: white !important;
   font-size: 1.8rem;
   margin-bottom: 30px;
   position: relative;
