--- a/index.html
+++ b/index.html
@@ -1048,7 +1048,7 @@
 
   <header>
     <picture>
-      <source srcset="assets/images/logo.webp" type="image/webp">
+      <source srcset="https://i.top4top.io/p_3465blx1d0.png" type="image/webp">
       <img src="https://i.top4top.io/p_3465blx1d0.png" alt="شعار مبادرة بناء المساجد" class="logo" loading="eager">
     </picture>
     <h1>ساهم في بناء مسجد</h1>
@@ -1795,21 +1795,21 @@
       <div class="completed-mosques" style="margin-top: 20px;">
         <div class="mosque-slider" style="display: flex; gap: 20px; overflow-x: auto; padding: 10px 0;">
           <div style="min-width: 250px; background: white; border-radius: var(--border-radius); overflow: hidden; box-shadow: var(--box-shadow);">
-            <img src="assets/images/mosque1.jpg" alt="مسجد الرحمن" style="width: 100%; height: 150px; object-fit: cover;">
+            <img src="https://i.top4top.io/p_3465blx1d0.png" alt="مسجد الرحمن" style="width: 100%; height: 150px; object-fit: cover;">
             <div style="padding: 15px;">
               <h4 style="margin: 0 0 10px; color: var(--main-color);">مسجد الرحمن - القاهرة</h4>
               <p style="font-size: 0.9rem; color: #555;">تم الانتهاء: يناير 2023</p>
             </div>
           </div>
           <div style="min-width: 250px; background: white; border-radius: var(--border-radius); overflow: hidden; box-shadow: var(--box-shadow);">
-            <img src="assets/images/mosque2.jpg" alt="مسجد الفرقان" style="width: 100%; height: 150px; object-fit: cover;">
+            <img src="https://i.top4top.io/p_3465blx1d0.png" alt="مسجد الفرقان" style="width: 100%; height: 150px; object-fit: cover;">
             <div style="padding: 15px;">
               <h4 style="margin: 0 0 10px; color: var(--main-color);">مسجد الفرقان - الجيزة</h4>
               <p style="font-size: 0.9rem; color: #555;">تم الانتهاء: أغسطس 2022</p>
             </div>
           </div>
           <div style="min-width: 250px; background: white; border-radius: var(--border-radius); overflow: hidden; box-shadow: var(--box-shadow);">
-            <img src="assets/images/mosque3.jpg" alt="مسجد النور" style="width: 100%; height: 150px; object-fit: cover;">
+            <img src="https://i.top4top.io/p_3465blx1d0.png" alt="مسجد النور" style="width: 100%; height: 150px; object-fit: cover;">
             <div style="padding: 15px;">
               <h4 style="margin: 0 0 10px; color: var(--main-color);">مسجد النور - الإسكندرية</h4>
               <p style="font-size: 0.9rem; color: #555;">تم الانتهاء: مايو 2022</p>
@@ -2032,7 +2032,7 @@
     
     <div class="copyright">
       <p>© 2025 جميع الحقوق محفوظة - ساهم في بناء مسجد</p>
-      <p>تصميم وبرمجة: فريق المبادرة</p>
+      <p>تصميم وبرمجة: mohamedluttfy</p>
     </div>
   </footer>
 
@@ -2342,7 +2342,7 @@
 document.addEventListener('DOMContentLoaded', function() {
   const projects = document.querySelectorAll('.project-card');
   const loadMoreBtn = document.getElementById('loadMoreBtn');
-  let visibleCount = 4; // عدد المشاريع الظاهرة في البداية
+  let visibleCount = 6; // عدد المشاريع الظاهرة في البداية
   const increment = 2; // عدد المشاريع الإضافية عند النقر
 
   // إخفاء المشاريع الزائدة عن الـ 4 أولًا
