--- a/index.html
+++ b/index.html
@@ -2018,13 +2018,13 @@
             <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="currentColor" viewBox="0 0 16 16" style="margin-left: 5px;">
               <path d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.568 17.568 0 0 0 4.168 6.608 17.569 17.569 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.678.678 0 0 0-.58-.122l-2.19.547a1.745 1.745 0 0 1-1.657-.459L5.482 8.062a1.745 1.745 0 0 1-.46-1.657l.548-2.19a.678.678 0 0 0-.122-.58L3.654 1.328zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
             </svg>
-            01012345678
+            01 #######
           </li>
           <li>
             <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="currentColor" viewBox="0 0 16 16" style="margin-left: 5px;">
               <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
             </svg>
-            123 شارع المساجد، المعادي، القاهرة
+            شارع ### #### ####
           </li>
         </ul>
       </div>
@@ -2045,14 +2045,14 @@
     "url": "https://example.com",
     "logo": "https://example.com/assets/images/logo.png",
     "sameAs": [
-      "https://facebook.com/yourpage",
-      "https://twitter.com/yourpage",
-      "https://instagram.com/yourpage",
-      "https://youtube.com/yourpage"
+      "https://facebook.com",
+      "https://twitter.com",
+      "https://instagram.com",
+      "https://youtube.com"
     ],
     "contactPoint": {
       "@type": "ContactPoint",
-      "telephone": "+201012345678",
+      "telephone": "+20###",
       "contactType": "customer service",
       "email": "info@example.com",
       "areaServed": "EG",
@@ -2060,15 +2060,15 @@
     },
     "address": {
       "@type": "PostalAddress",
-      "streetAddress": "123 شارع المساجد",
-      "addressLocality": "المعادي",
-      "addressRegion": "القاهرة",
-      "postalCode": "12345",
-      "addressCountry": "EG"
+      "streetAddress": "شارع ##",
+      "addressLocality": "اسم الشارع ##",
+      "addressRegion": "المحافظة ##",
+      "postalCode": "البريد ###",
+      "addressCountry": "الدوله ###"
     },
     "funder": {
       "@type": "Organization",
-      "name": "وزارة الأوقاف المصرية"
+      "name": "وزارة###"
     }
   }
   </script>
