--- a/index.html
+++ b/index.html
@@ -1889,24 +1889,24 @@
               <h4 style="margin: 0 0 10px; color: var(--main-color);">مسجد النور - الإسكندرية</h4>
               <p style="font-size: 0.9rem; color: #555;">تم الانتهاء: مايو 2022</p>
             </div>
-          </div>
 
 
-   <div style="min-width: 250px; background: white; border-radius: var(--border-radius); overflow: hidden; box-shadow: var(--box-shadow);">
+   <div> style="min-width: 250px; background: white; border-radius: var(--border-radius); overflow: hidden; box-shadow: var(--box-shadow);">
             <img src="https://j.top4top.io/p_34668c0zk0.png" alt="مسجد النور" style="width: 100%; height: 150px; object-fit: cover;">
             <div style="padding: 15px;">
               <h4 style="margin: 0 0 10px; color: var(--main-color);">مسجد النور - الإسكندرية</h4>
               <p style="font-size: 0.9rem; color: #555;">تم الانتهاء: مايو 2022</p>
             </div>
+   </div>
 
 
-   <div style="min-width: 250px; background: white; border-radius: var(--border-radius); overflow: hidden; box-shadow: var(--box-shadow);">
+   <div> style="min-width: 250px; background: white; border-radius: var(--border-radius); overflow: hidden; box-shadow: var(--box-shadow);">
             <img src="https://j.top4top.io/p_34668c0zk0.png" alt="مسجد النور" style="width: 100%; height: 150px; object-fit: cover;">
             <div style="padding: 15px;">
               <h4 style="margin: 0 0 10px; color: var(--main-color);">مسجد النور - الإسكندرية</h4>
               <p style="font-size: 0.9rem; color: #555;">تم الانتهاء: مايو 2022</p>
             </div>
-
+   </div>
           
         </div>
       </div>
