--- a/index.html
+++ b/index.html
@@ -1047,7 +1047,7 @@
   </a>
 
   <header>
-     <a href="/" style="display: inline-block;">
+     <a href="https://mohamedprojects7373.github.io/donate-to-mosques/" style="display: inline-block;">
   <picture>
     <source srcset="https://j.top4top.io/p_34668c0zk0.png" type="image/webp">
     <img src="##" alt="شعار مبادرة بناء المساجد" class="logo" loading="eager">
