--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
   <link rel="apple-touch-icon" href="https://j.top4top.io/p_34668c0zk0.png">
   
   <style>
+      
+      * {
+    -webkit-tap-highlight-color: transparent;
+    box-sizing: border-box;
+    scroll-behavior: smooth;
+    margin: 0;
+    padding: 0;
+  }
+  
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(10px); }
       to { opacity: 1; transform: translateY(0); }
